[metadata]
name = DMDO
version = 1.2.0
author = Ahmed H. Bayoumy
author_email = ahmed.bayoumy@mail.mcgill.ca
description = "Python package for DMDO; an implementation of the NoHiMDO and ADMM."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ahmed-Bayoumy/DMDO
project_urls =
    Bug Tracker = https://github.com/Ahmed-Bayoumy/DMDO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8


[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.910tox>=3.24

[options.package_data]
OMADS = py.typed

[flake8]
max-line-length = 100